r312 (28. 02. 2025):
Added option "Show Buff Description"
Camera Loop: Fixed an issue where the tracker could spam log
Fixed an issue where bagable interactable loot is not properly colored based on their weight when interaction is enabled
Fixed an issue where hidden Poco Health Floats would be briefly visible after finishing a heist

r311 (24. 02. 2025):
Fixed another instance of trackers or waypoints not updating correctly
Menu: Fixed child options not correctly enabled if parent is enabled
Menu: Fixed trackers not updating visibility when "Show Trackers" option is switched

r310 (21. 02. 2025):
Fixed a crash in ECM Jammer

r309 (20. 02. 2025):
Fixed an issue where trackers and waypoints do not update correctly if mission trackers or waypoints are disabled

r308 (19. 02. 2025):
Fixed a crash in inaccurate trackers

r307 (18. 02. 2025):
Lost in Transit: Fixed a crash after interacting with the crane

r306 (17. 02. 2025):
Added option "Show Trackers"
Menu: Increased X and Y offsets from 1280 and 720 to 1920 and 1080 respectively
Removed option "Show Only Waypoints"; Waypoints no longer rely on their tracker counterpant and now they work on their own (disabling tracker will not affect waypoint)
Removed option "Show gained XP in Mission Briefing only"; Gained XP in Mission Briefing will work if XP tracker is disabled

r305 (14. 02. 2025):
Menu: Fixed an issue where it is not possible to move in the menu with arrow keys or gamepad once you are in a heist

r304 (12. 02. 2025):
Dodge Buff: Adjusted dodge calculation to also include Sicario's Smoke Bomb (if player is inside)
Dodge Buff: Fixed an issue where the buff could be stuck in another buff

r303 (08. 02. 2025):
Added option "Accumulate Damage"

r302 (02. 02. 2025):
Poco Health Floats: Fixed possible crashes after going into custody or finishing a heist

r301 (01. 02. 2025):
Heat Street: Fixed a load crash with Restoration Mod Overhaul installed

r300 (31. 01. 2025):